add delete all shList controller and route and swagger
