# routes/ingredientsRoutes.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 
-const { postIngredientShoppingList, getShoppingList, deleteItemShoppingList } = require('../controllers/shoppingListController');
+const { postIngredientShoppingList, getShoppingList, deleteItemShoppingList, deleteAllShoppingList } = require('../controllers/shoppingListController');
 
 const {
   get,
@@ -25,6 +25,9 @@ router.post('/shopping-list', asyncWrapper(postIngredientShoppingList));
 
 // delete ingredient from shopping list
 router.delete('/shopping-list/:ingredientId', asyncWrapper(deleteItemShoppingList));
+
+// delete all shopping-list
+router.delete('/shopping-list', asyncWrapper(deleteAllShoppingList));
 
 
 module.exports = { ingredientsRouter: router };
